# agentic_ai_training_course

./: .gitignore  README.md
milestone_1/week_1/Day_2/: intro_to_python.ipynb
milestone_1/week_1/Day_3/: Introduction_to_pandas.ipynb  earthquake_cleaned_data.csv
milestone_1/week_1/Day_4/: banana_ripeness_raw.csv  machine_learning.ipynb
milestone_1/week_1/Day_5/: Intro_to_DL.ipynb
milestone_1/week_2/Day_10/: LLM_part_1.ipynb
milestone_1/week_2/Day_10/demo/: .env  .env.example  main.py
milestone_1/week_2/Day_6/: python_for_agents.ipynb
milestone_1/week_2/Day_6/mini-agent/: agent.py  tools.py
milestone_1/week_2/Day_7/: nlp.ipynb
milestone_1/week_2/Day_8/: nlp_pipe.py  nlp_project.ipynb  output.txt  raw.txt
milestone_1/week_2/Day_9/: vector_embedding.ipynb
milestone_2/week_3/Day_11/: LLM_part_2.ipynb
milestone_2/week_3/Day_11/demo/: .env.example  main.py  requirements.txt
milestone_2/week_3/Day_12/: python_part_1.ipynb
milestone_2/week_3/Day_13/: python_part2.ipynb
milestone_2/week_3/Day_15/: prompt_engg_part_1.ipynb
milestone_2/week_3/Day_15/demo/: config.py  main.py  prompts.py
milestone_2/week_4/Day_16/: prompt_engg_part_2.ipynb
milestone_2/week_4/Day_16/demo/: .env  config.py  (+2 more)
milestone_2/week_4/Day_19/: Simple_RAG_Using_Langchain_OpenAI.ipynb
milestone_3/week_5/Day_24/anatomy_of_agent/: app.py  main.py  pyproject.toml  requirements.txt
milestone_3/week_5/Day_24/anatomy_of_agent/data/: agentic_ai_guide.txt
milestone_3/week_5/Day_24/anatomy_of_agent/vectorstore/: chroma.sqlite3
milestone_3/week_6/Day_29/: langraph_tutorials.ipynb
(+74 files in other folders)
