[project]
name = "anatomy-of-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.3.3",
    "numexpr>=2.14.1",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
